--- a/Sources/WallpaperScroll/Info.plist
+++ b/Sources/WallpaperScroll/Info.plist
@@ -10,5 +10,9 @@
     <string>1.0</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
+    <key>com.apple.security.app-sandbox</key>
+    <true/>
+    <key>com.apple.security.files.user-selected.read-only</key>
+    <true/>
 </dict>
 </plist>
